# spotify-panel-client

./: .gitignore  README.md  config.json  example.env  pyproject.toml
assets/: README.md  path_test.txt
scripts/: run.sh  setup.sh
src/: __main__.py
src/api/: auth.py  dao.py  error_handler.py
src/board/: render.py  renderState.py
src/spotify_api/: auth.py
src/utils/: config.py  image_helper.py  test.py
